@@ -70,12 +70,12 @@ option(enable-openmp "Enable POSIX threads support" ON)
 option(enable-lgpl "Enable only LGPL part of MathGL")
 option(enable-mgl2 "Use names 'libmgl2-*' instead of 'libmgl-*'")
 #option(enable-ltdl "Enable loading modules support")
-CMAKE_DEPENDENT_OPTION(enable-doc-html "Enable HTML documentation" ON "NOT enable-all-docs" OFF)
-CMAKE_DEPENDENT_OPTION(enable-doc-info "Enable INFO documentation" ON "NOT enable-all-docs" OFF)
-CMAKE_DEPENDENT_OPTION(enable-doc-pdf-ru "Enable Russian PDF documentation" ON "NOT enable-all-docs" OFF)
-CMAKE_DEPENDENT_OPTION(enable-doc-pdf-en "Enable English PDF documentation" ON "NOT enable-all-docs" OFF)
-CMAKE_DEPENDENT_OPTION(enable-doc-prc "Enable PDF samples for HTML docs" ON "NOT enable-all-docs" OFF)
-CMAKE_DEPENDENT_OPTION(enable-doc-json "Enable JSON samples for HTML docs" ON "NOT enable-all-docs" OFF)
+CMAKE_DEPENDENT_OPTION(enable-doc-html "Enable HTML documentation" ON "NOT enable-all-docs" ON)
+CMAKE_DEPENDENT_OPTION(enable-doc-info "Enable INFO documentation" OFF "NOT enable-all-docs" ON)
+CMAKE_DEPENDENT_OPTION(enable-doc-pdf-ru "Enable Russian PDF documentation" OFF "NOT enable-all-docs" ON)
+CMAKE_DEPENDENT_OPTION(enable-doc-pdf-en "Enable English PDF documentation" OFF "NOT enable-all-docs" ON)
+CMAKE_DEPENDENT_OPTION(enable-doc-prc "Enable PDF samples for HTML docs" OFF "NOT enable-all-docs" ON)
+CMAKE_DEPENDENT_OPTION(enable-doc-json "Enable JSON samples for HTML docs" OFF "NOT enable-all-docs" ON)
 
 CMAKE_DEPENDENT_OPTION(enable-zlib "Enable zlib support" ON "NOT enable-all" ON)
 CMAKE_DEPENDENT_OPTION(enable-png "Enable png support" ON "NOT enable-all" ON)
